Add documentation for all public methods